# cursovaya

./: CMakeLists.txt  CMakeSettings.json  cursovaya.cpp  cursovaya.h
